--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,8 +6,7 @@ website:
   title: "Ethan Saline's Portfolio"
   favicon: Images/favicon.png
   back-to-top-navigation: true
-  repo-url: https://github.com/username/username.github.io
-  #repo-actions: [issue] #if you want to allow others to report issues on your site uncomment this line
+  repo-url: https://github.com/Ethan-Saline/Data_Science_Portfolio
 
   page-footer: 
     border: true
@@ -24,55 +23,63 @@ website:
         file: index.qmd
       - text: "My Resume"
         file: resume.qmd
-      - text: "Data Cleansing"
-        file: cleansing.qmd
-      - text: "Data Exploration"
-        file: exploration.qmd
-      - text: "Story Telling"
-        file: story_telling.qmd
       - text: "Machine Learning"
-        file: ml.qmd
-      - text: "Full Stack"
-        file: full_stack.qmd
-      - text: "Competitions"
-        file: competition.qmd
-  
-  # learn more about navication here https://quarto.org/docs/websites/website-navigation.html
-  # comment out any of the sections below to turn off the sidebar
+        file: machine_learning.qmd
+      - text: "Time Series"
+        file: time_series.qmd
+      - text: "Statistical Analysis"
+        file: statistical_analysis.qmd
+      - text: "Bioinformatics"
+        file: bioinformatics.qmd
+      - text: "Storytelling"
+        file: storytelling.qmd
+        
 
   sidebar: 
-    - title: "Data Cleansing"
+    - title: "Machine Learning"
       style: "docked"
       background: light
       contents:
-        - text: "Data Cleansing"
-          file: cleansing.qmd
+        - text: "Machine Learning"
+          file: machine_learning.qmd
         - text: "---"
         - text: "Project 1"
-          file: Cleansing_Projects/project1.qmd
+          file: machine_learning/project1.qmd
         - text: "---"
-        - text: "Project 2"
-          file: Cleansing_Projects/project2.qmd
-        - text: "---"
-        - text: "Project 3"
-          file: Cleansing_Projects/project3.qmd
-        - text: "---"
-    - title: "Data Exploration"
+
+    - title: "Time Series"
       style: "docked"
       background: light
       contents:
-        - text: "Data Exploration"
-          file: exploration.qmd
+        - text: "Time Series"
+          file: time_series.qmd
         - text: "---"
         - text: "Project 1"
-          file: Cleansing_Exploration/project1.qmd
+          file: time_series/project1.qmd
         - text: "---"
-        - text: "Project 2"
-          file: Cleansing_Exploration/project2.qmd
+        
+    - title: "Statistical Analysis"
+      style: "docked"
+      background: light
+      contents:
+        - text: "Statistical Analysis"
+          file: statistical_analysis.qmd
         - text: "---"
-        - text: "Project 3"
-          file: Cleansing_Exploration/project3.qmd
+        - text: "Project 1"
+          file: statistical_analysis/project1.qmd
         - text: "---"
+
+    - title: "Bioinformatics"
+      style: "docked"
+      background: light
+      contents:
+        - text: "Bioinformatics"
+          file: bioinformatics.qmd
+        - text: "---"
+        - text: "Project 1"
+          file: bioinformatics/project1.qmd
+        - text: "---"
+      
     - title: "Story Telling"
       style: "docked"
       background: light
@@ -81,61 +88,9 @@ website:
           file: story_telling.qmd
         - text: "---"
         - text: "Project 1"
-          file: Story_Telling/project1.qmd
+          file: story_telling/project1.qmd
         - text: "---"
-        - text: "Project 2"
-          file: Story_Telling/project2.qmd
-        - text: "---"
-        - text: "Project 3"
-          file: Story_Telling/project3.qmd
-        - text: "---"
-    - title: "Machine Learning"
-      style: "docked"
-      background: light
-      contents:
-        - text: "Machine Learning"
-          file: ml.qmd
-        - text: "---"
-        - text: "Project 1"
-          file: Machine_Learning/project1.qmd
-        - text: "---"
-        - text: "Project 2"
-          file: Machine_Learning/project2.qmd
-        - text: "---"
-        - text: "Project 3"
-          file: Machine_Learning/project3.qmd
-        - text: "---"
-    - title: "Full Stack"
-      style: "docked"
-      background: light
-      contents:
-        - text: "Full Stack"
-          file: full_stack.qmd
-        - text: "---"
-        - text: "Project 1"
-          file: Full_Stack/project1.qmd
-        - text: "---"
-        - text: "Project 2"
-          file: Full_Stack/project2.qmd
-        - text: "---"
-    - title: "Competition"
-      style: "docked"
-      background: light
-      contents:
-        - text: "Competition"
-          file: competition.qmd
-        - text: "---"
-        - text: "Project 1"
-          file: Competition/project1.qmd
-        - text: "---"
-        - text: "Project 2"
-          file: Competition/project2.qmd
-        - text: "---"
-        - text: "Project 3"
-          file: Competition/project3.qmd
-        - text: "---"
-
-  
+        
 format:  
   html:
     theme: #see this link to customize the theme with css (https://quarto.org/docs/output-formats/html-themes.html#dark-mode)
