--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,48 +5,48 @@ project:
 website:
   title: "Ethan Saline"
 
-navbar:
-  background: light
-  search: true
-  right:
-    - text: "Home"
-      file: index.qmd
-    - text: "My Resume"
-      file: resume.qmd
-    - text: "Machine Learning"
-      menu:
-        - text: "Overview"
-          file: machine_learning.qmd
-        - text: "Project 1"
-          file: project1.qmd
+  navbar:
+    background: light
+    search: true
+    right:
+      - text: "Home"
+        file: index.qmd
+      - text: "My Resume"
+        file: resume.qmd
+      - text: "Machine Learning"
+        menu:
+          - text: "Overview"
+            file: machine_learning.qmd
+          - text: "Project 1"
+            file: machine_learning/project1.qmd
 
-    - text: "Time Series"
-      menu:
-        - text: "Overview"
-          file: time_series.qmd
-        - text: "Project 1"
-          file: project1.qmd
-          
-    - text: "Statistical Analysis"
-      menu:
-        - text: "Overview"
-          file: statistical_analysis.qmd
-        - text: "Project 1"
-          file: project1.qmd
-          
-    - text: "Bioinformatics"
-      menu:
-        - text: "Overview"
-          file: bioinformatics.qmd
-        - text: "Project 1"
-          file: project1.qmd
-          
-    - text: "Storytelling"
-      menu:
-        - text: "Overview"
-          file: storytelling.qmd
-        - text: "Project 1"
-          file: project1.qmd
+      - text: "Time Series"
+        menu:
+          - text: "Overview"
+            file: time_series.qmd
+          - text: "Project 1"
+            file: time_series/project1.qmd
+            
+      - text: "Statistical Analysis"
+        menu:
+          - text: "Overview"
+            file: statistical_analysis.qmd
+          - text: "Project 1"
+            file: statistical_analysis/project1.qmd
+            
+      - text: "Bioinformatics"
+        menu:
+          - text: "Overview"
+            file: bioinformatics.qmd
+          - text: "Project 1"
+            file: bioinformatics/project1.qmd
+            
+      - text: "Storytelling"
+        menu:
+          - text: "Overview"
+            file: storytelling.qmd
+          - text: "Project 1"
+            file: storytelling/project1.qmd
 
   page-footer:
     border: true
