--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,7 +6,8 @@ website:
   title: "<span style='font-family: Arial Black, Impact, sans-serif;
                      font-weight: 600;
                      font-size: 20px;'>
-          Ethan Saline Portfolio
+          Ethan Saline's
+            Portfolio
         </span>"
 
   navbar:
