--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,7 +17,7 @@ website:
       - text: "Home"
         file: index.qmd
         
-      - text: "My Resume"
+      - text: "Resume"
         file: resume.qmd
         
       - text: "Machine Learning"
